--- a/style.css
+++ b/style.css
@@ -4,33 +4,35 @@
  * ---------------------------------------------------
  */
 /**----------
-	1. Base
-		1.1 base
-		1.2 Fonts
-		1.3 Typography
-		1.4 Helpers
-	2. Sections
-		2.1 Header 
-		2.2 Footer
-	3. Components
-		3.1 Buttons
-	4. Pages
-		4.1 Home page
-	5. Themes
-		5.1 Default Theme
+	3. Generic
+		3.1 base
+		3.2 Fonts
+		3.3 Typography
+		3.4 Helpers
+	4. Elements
+		4.1 Header 
+		4.2 Headings
+		4.3 Parags
+		4.4 Footer
+	5. Objects
+		5.1 Buttons
+	6. Components
+		6.1 Buttons
+		6.1 Forms elements
+	7. Utilities
+		7.1 utilities
 
 
 ---------------*/
 /**
  * ---------------------------------------------------
- * 	1.  Base
+ * 	3. generic
  * ---------------------------------------------------
  */
-/* --------------------- 1.1 Base --------------------- */
+/* --------------------- 3.1 Base --------------------- */
 /**
  * Set up a decent box model on the root element
  */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto+Condensed:300,300i,400,400i,700,700i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i");
 html {
   box-sizing: border-box;
 }
@@ -58,14 +60,34 @@ img {
   margin: 8px 0;
 }
 
-/* --------------------- 1.2 Fonts --------------------- */
-/* --------------------- 1.3 Typography --------------------- */
+/* --------------------- 3.2 Fonts --------------------- */
+@font-face {
+  font-family: "segoe";
+  src: url("assets/fonts/Segoe/Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "segoe-light";
+  src: url("assets/fonts/Segoe/Light.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "segoe-bold";
+  src: url("assets/fonts/Segoe/Bold.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+/* --------------------- 3.3 Typography --------------------- */
 /**
  * Basic typography style for copy text
  */
 body {
   color: #444444;
-  font-family: "Roboto", sans-serif;
+  font-family: "segoe", sans-serif;
+  font-style: normal;
+  font-weight: 400;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -90,25 +112,38 @@ dd {
   margin-left: 25px;
 }
 
-/* --------------------- 1.4 Helpers --------------------- */
+/* --------------------- 3.4 Helpers --------------------- */
 /**
  * ---------------------------------------------------
- * 	2.  Sections
+ * 	4. Elements
  * ---------------------------------------------------
  */
-/* --------------------- 2.1 Header --------------------- */
-/* --------------------- 2.2 Footer --------------------- */
+/* --------------------- 4.1 Header --------------------- */
+/* --------------------- 4.2 headings --------------------- */
+/* --------------------- 4.3 parags (texts, notes, messages) --------------------- */
+/* --------------------- 4.4 Footer --------------------- */
 /**
  * ---------------------------------------------------
- * 	3.  Components
+ * 	5.  Objects
  * ---------------------------------------------------
  */
-/* --------------------- 3.1 Buttons --------------------- */
 /**
  * ---------------------------------------------------
- * 	4.  Pages
+ * 	6.  Components
  * ---------------------------------------------------
  */
-/* --------------------- 4.1 Home page --------------------- */
+/* --------------------- 6.1 Buttons --------------------- */
+/* --------------------- 6.2 Inputs --------------------- */
+/**
+ * ---------------------------------------------------
+ * 	7.  Utilities
+ * ---------------------------------------------------
+ */
+/**
+ * ---------------------------------------------------
+ * 	8.  Pages
+ * ---------------------------------------------------
+ */
+/* --------------------- 8.1 Home Page Contoso --------------------- */
 
 /*# sourceMappingURL=style.css.map */
