--- a/assets/styles/03_generics/_typography.scss
+++ b/assets/styles/03_generics/_typography.scss
@@ -3,7 +3,7 @@
  */
 body {
   color: $dark-grey;
-  font-family: $font-roboto;
+  @include font-regular();
   font-style: normal;
   font-weight: 400;
   font-size: $base-font-size;
