--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1,71 +1,96 @@
 @charset 'UTF-8';
 // Configuration and helpers
 // -------------------------------
-@import 'abstracts/variables';
-@import 'abstracts/functions';
-@import 'abstracts/mixins';
+@import '01_settings/variables';
+@import '02_tools/functions';
+@import '02_tools/mixins';
+@import '02_tools/flex';
 /**
  * ---------------------------------------------------
  * 	Table of contents
  * ---------------------------------------------------
  */
 /**----------
-	1. Base
-		1.1 base
-		1.2 Fonts
-		1.3 Typography
-		1.4 Helpers
-	2. Sections
-		2.1 Header 
-		2.2 Footer
-	3. Components
-		3.1 Buttons
-	4. Pages
-		4.1 Home page
-	5. Themes
-		5.1 Default Theme
+	3. Generic
+		3.1 base
+		3.2 Fonts
+		3.3 Typography
+		3.4 Helpers
+	4. Elements
+		4.1 Header 
+		4.2 Headings
+		4.3 Parags
+		4.4 Footer
+	5. Objects
+		5.1 Buttons
+	6. Components
+		6.1 Buttons
+		6.1 Forms elements
+	7. Utilities
+		7.1 utilities
 
 
 ---------------*/
 /**
  * ---------------------------------------------------
- * 	1.  Base
+ * 	3. generic
  * ---------------------------------------------------
  */
 
-/* --------------------- 1.1 Base --------------------- */ 
-@import 'base/base';
-/* --------------------- 1.2 Fonts --------------------- */ 
-@import 'base/fonts';
-/* --------------------- 1.3 Typography --------------------- */ 
-@import 'base/typography';
-/* --------------------- 1.4 Helpers --------------------- */ 
-@import 'base/helpers';
+/* --------------------- 3.1 Base --------------------- */ 
+@import '03_generics/base';
+/* --------------------- 3.2 Fonts --------------------- */ 
+@import '03_generics/fonts';
+/* --------------------- 3.3 Typography --------------------- */ 
+@import '03_generics/typography';
+/* --------------------- 3.4 Helpers --------------------- */ 
+@import '03_generics/helpers';
 
 /**
  * ---------------------------------------------------
- * 	2.  Sections
+ * 	4. Elements
  * ---------------------------------------------------
  */
-/* --------------------- 2.1 Header --------------------- */ 
-@import 'layout/header';
-/* --------------------- 2.2 Footer --------------------- */ 
-@import 'layout/footer';
+/* --------------------- 4.1 Header --------------------- */ 
+@import '04_elements/header';
+/* --------------------- 4.2 headings --------------------- */ 
+@import '04_elements/headings';
+/* --------------------- 4.3 parags (texts, notes, messages) --------------------- */ 
+@import '04_elements/parags';
+/* --------------------- 4.4 Footer --------------------- */ 
+@import '04_elements/footer';
 
 /**
  * ---------------------------------------------------
- * 	3.  Components
+ * 	5.  Objects
  * ---------------------------------------------------
  */
-/* --------------------- 3.1 Buttons --------------------- */ 
-@import 'components/button';
+
+
+/**
+ * ---------------------------------------------------
+ * 	6.  Components
+ * ---------------------------------------------------
+ */
+/* --------------------- 6.1 Buttons --------------------- */ 
+@import '06_components/button';
+/* --------------------- 6.2 Inputs --------------------- */ 
+@import '06_components/input-text';
 
 
 
 /**
  * ---------------------------------------------------
- * 	4.  Pages
+ * 	7.  Utilities
  * ---------------------------------------------------
  */
-/* --------------------- 4.1 Home page --------------------- */ 
-@import 'pages/home';
+@import '07_utilities/utilities';
+
+
+/**
+ * ---------------------------------------------------
+ * 	8.  Pages
+ * ---------------------------------------------------
+ */
+/* --------------------- 8.1 Home Page Contoso --------------------- */ 
+@import '08_pages/home';
