--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -139,7 +139,7 @@ dd {
 /* --------------------- 8.1 Home Page Contoso --------------------- */
 body {
   background: #142d4c;
-  background: linear-gradient(137deg, #62A7FF 0%, #435AB6 46.381%, #435AB6 46.381%, #3F51AD 51.72%, #142D4C 100%);
+  background: linear-gradient(323deg, #62a7ff 0%, #435ab6 46.381%, #435ab6 46.381%, #3f51ad 51.72%, #142d4c 100%);
 }
 
 /*# sourceMappingURL=style.css.map */
