--- a/assets/styles/03_generics/_base.scss
+++ b/assets/styles/03_generics/_base.scss
@@ -5,9 +5,17 @@
 /**
  * Set up a decent box model on the root element
  */
+
 html {
-  box-sizing: border-box;
+    @include box-sizing(border-box);
+    font-size: 62.5%;
 }
+
+html,
+body {
+    height: 100%;
+}
+
 
 /**
  * Make all elements from the DOM inherit from the parent box-sizing
@@ -15,19 +23,79 @@ html {
  * making all elements inheriting from the root box-sizing value
  * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
  */
-*, *::before, *::after {
-  box-sizing: inherit;
-} 
+
+*,
+*::before,
+*::after {
+    @include box-sizing(border-box);
+}
+
+body {
+    -webkit-font-smoothing: subpixel-antialiased;
+    margin: 0;
+    padding: 0;
+}
+
+
+/**
+ * Basic styles for headings
+ */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
+
 
 /**
  * Basic styles for links
  */
+
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 
-img{
-	max-width: 100%;
-	margin: 8px 0;
+/**
+ * Basic styles for forms
+ */
+
+fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+
+/**
+ * Basic styles for images
+ */
+
+img {
+    max-width: 100%;
+}
+
+
+/**
+ * Basic styles for images
+ */
+
+picture {
+    display: block;
+}
+
+
+/**
+ * Basic styles for list
+ */
+
+ul,
+li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
