--- a/assets/styles/01_settings/_variables.scss
+++ b/assets/styles/01_settings/_variables.scss
@@ -8,14 +8,13 @@ $h-color: #111; // headings color
 $a-color: #337ab7; // links color
 
 /* esto s son los buenos */
+
+$cool-grey:#9fa3a7;
 $white:#fff; // text
-$white--87:rgba(255, 255,  255, 0.87); // secondary text
+$white--87:rgba(255, 255, 255, 0.7); // secondary text
 $tomato:#f05638; // button
-
 //$color-scheme: @@@@
-
 // Font sizes
-
 /// Relative or absolute URL where all assets are served from
 /// @type String
 /// @example scss - When using a CDN
