--- a/assets/styles/03_generics/_fonts.scss
+++ b/assets/styles/03_generics/_fonts.scss
@@ -2,39 +2,23 @@
 // This file contains all @font-face declarations, if any.
 // -----------------------------------------------------------------------------
 @font-face {
-    font-family:'segoe';
-    src: url('assets/fonts/Segoe/Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
+    font-family: 'segoe-bold';
+    src: url('./../fonts/bold-webfont.woff2') format('woff2'), url('./../fonts/bold-webfont.woff') format('woff');
 }
+
 @font-face {
-    font-family:'segoe-light';
-    src: url('assets/fonts/Segoe/Light.woff') format('woff');
-    font-weight: normal;
+    font-family: 'segoe-light';
+    src: url('./../fonts/light-webfont.woff2') format('woff2'), url('./../fonts/light-webfont.woff') format('woff');
+}
+
+@mixin font-light {
+    font-family: 'segoe-light';
     font-style: normal;
+    font-weight: 300;
 }
-@font-face {
-    font-family:'segoe-bold';
-    src: url('assets/fonts/Segoe/Bold.woff') format('woff');
-    font-weight: normal;
+
+@mixin font-bold {
+    font-family: 'segoe-bold';
     font-style: normal;
-}
-
-
-
-@mixin font-regular{
-	font-family: 'segoe', sans-serif;
-	font-style: normal;
-	font-weight: 400;
-}
-@mixin font-light{
-	font-family: 'segoe-light', sans-serif;
-	font-style: normal;
-	font-weight: 300;
-}
-@mixin font-bold{
-	font-family: 'segoe-bold', sans-serif;
-	font-style: normal;
-	font-weight: 700;
+    font-weight: 500;
 }
