--- a/assets/styles/04_elements/_headings.scss
+++ b/assets/styles/04_elements/_headings.scss
@@ -1,7 +1,7 @@
-.c-h1 {
-
-}
-
 .c-h2 {
-    
+    @include font-light();
+    font-size: 24px;
+    line-height: 1.17;
+    color: $white;
+    margin-bottom: 9px;
 }
