--- a/assets/styles/04_elements/_parags.scss
+++ b/assets/styles/04_elements/_parags.scss
@@ -1,3 +1,7 @@
-.c_parag {
-    
+.c-parag {
+    @include font-light();
+    color: $white--87;
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 0 0 26px;
 }
