--- a/assets/styles/04_elements/_headings.scss
+++ b/assets/styles/04_elements/_headings.scss
@@ -4,4 +4,7 @@
     line-height: 1.17;
     color: $white;
     margin-bottom: 9px;
+    @include breakpoint(desktop) {
+        font-size: 48px
+    }
 }
