--- a/assets/styles/04_elements/_parags.scss
+++ b/assets/styles/04_elements/_parags.scss
@@ -4,4 +4,7 @@
     font-size: 16px;
     line-height: 1.5;
     margin: 0 0 26px;
+    @include breakpoint(desktop) {
+        font-size: 24px;
+    }
 }
