--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -104,6 +104,10 @@
 
 @import '06_components/input-text';
 
+/* --------------------- 6.3 Article --------------------- */
+
+@import '06_components/article';
+
 /**
  * ---------------------------------------------------
  * 	7.  Utilities
