--- a/assets/styles/03_generics/_helpers.scss
+++ b/assets/styles/03_generics/_helpers.scss
@@ -1,6 +1,20 @@
-.hidden-mobile {
-    display: none;
+.u-show--mobile {
+    display: block;
     @include breakpoint(tablet) {
+        display: none;
+    }
+}
+
+.u-show--tablet {
+    display: block;
+    @include breakpoint(desktop) {
+        display: none;
+    }
+}
+
+.u-show--desktop {
+    display: none;
+    @include breakpoint(desktop) {
         display: block;
     }
 }
