--- a/assets/styles/06_Components/_input-text.scss
+++ b/assets/styles/06_Components/_input-text.scss
@@ -1,9 +1,13 @@
 .c-input-text {
     @include font-light();
+    @include font-size(1.6);
     color: $cool-grey;
-    font-size: 16px;
     border: none;
     height: 45px;
     padding-left: 11px;
     width: 100%;
+    @include breakpoint(desktop) {
+        @include font-size(2.0);
+        height: 55px;
+    }
 }
