--- a/assets/styles/08_pages/_home.scss
+++ b/assets/styles/08_pages/_home.scss
@@ -10,17 +10,75 @@ body {
     background: linear-gradient(323deg, #62a7ff -7%, #435ab6 11.381%, #435ab6 19.381%, #3f51ad 28.72%, #142d4c 100%);
     height: 100vh;
     padding: 40px 20px 58px;
+    @include breakpoint(tablet) {
+        padding: 80px 20px 0;
+    }
+    @include breakpoint(desktop) {
+        padding: 0 20px;
+        height: 620px;
+        position: relative;
+    }
+    @include breakpoint(desktop--lg) {
+        height: 759px;
+    }
+}
+
+.c-social-nav {
+    display: none;
+    @include breakpoint(desktop) {
+        @include flexbox();
+        @include justify-content(flex-end);
+    }
+}
+
+.c-social-nav__list {
+    @include breakpoint(desktop) {
+        @include flexbox();
+        @include justify-content(flex-end);
+        margin-top: 40px;
+        margin-right: 40px;
+    }
+}
+
+.c-social-nav__item {
+    height: 32px;
+    width: 32px;
+    &:first-of-type {
+        margin-right: 10px;
+    }
+}
+
+.c-social-nav__link {
+    @include breakpoint(desktop) {
+        @include flexbox();
+        @include align-items(center);
+        @include justify-content(center);
+    }
 }
 
 .c-header {
     margin-bottom: 26px;
+    @include breakpoint(tablet) {
+        margin-left: 20px;
+        margin-bottom: 40px;
+    }
+    @include breakpoint(desktop) {
+        margin-left: 0;
+        margin-bottom: 30px;
+    }
 }
 
 .c-logo {
+    background-image: url(../../images/contoso.svg);
+    background-size:cover;
+    background-repeat:no-repeat;
     height: 42px;
-    text-align: center;
     margin: 0 auto;
+    text-align: center;
     width: 132px;
+    @include breakpoint(tablet) {
+        margin: 0;
+    }
 }
 
 .c-logo__svg {
@@ -28,12 +86,47 @@ body {
     height: 100%;
 }
 
-.c-picture {
+.c-section {
+    margin: auto;
+    @include breakpoint(desktop) {
+        @include flexbox();
+        @include align-items(center);
+        @include justify-content(center);
+        position: relative;
+    }
+    @include breakpoint(desktop--lg) {
+        max-width: 1200px;
+    }
+}
+
+.c-article__picture {
     margin-bottom: 23px;
+    @include breakpoint(tablet) {
+        margin-bottom: 0;
+    }
+    @include breakpoint(desktop) {
+        margin-bottom: 23px;
+        width: 30%;
+    }
+    @include breakpoint(desktop--lg) {
+        width: 374px;
+        height: 732px;
+    }
+}
+
+.c-picture {
+    @include breakpoint(desktop) {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
 }
 
 .c-cta {
     @include flexbox();
+    @include breakpoint(desktop) {
+        max-width: 420px;
+    }
 }
 
 .c-input-text {
