--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -172,12 +172,32 @@ dd {
 }
 
 /* --------------------- 3.4 Helpers --------------------- */
-.hidden-mobile {
-  display: none;
+.u-show--mobile {
+  display: block;
 }
 
 @media (min-width: 768px) {
-  .hidden-mobile {
+  .u-show--mobile {
+    display: none;
+  }
+}
+
+.u-show--tablet {
+  display: block;
+}
+
+@media screen and (min-width: 1024px) {
+  .u-show--tablet {
+    display: none;
+  }
+}
+
+.u-show--desktop {
+  display: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .u-show--desktop {
     display: block;
   }
 }
@@ -194,9 +214,18 @@ dd {
   font-style: normal;
   font-weight: 300;
   font-size: 24px;
+  font-size: 2.4rem;
   line-height: 1.17;
   color: #fff;
   margin-bottom: 9px;
+}
+
+@media screen and (min-width: 1024px) {
+  .c-h2 {
+    font-size: 48px;
+    font-size: 4.8rem;
+    margin-bottom: 30px;
+  }
 }
 
 /* --------------------- 4.3 parags (texts, notes, messages) --------------------- */
@@ -206,8 +235,17 @@ dd {
   font-weight: 300;
   color: rgba(255, 255, 255, 0.7);
   font-size: 16px;
+  font-size: 1.6rem;
   line-height: 1.5;
   margin: 0 0 26px;
+}
+
+@media screen and (min-width: 1024px) {
+  .c-parag {
+    font-size: 24px;
+    font-size: 2.4rem;
+    margin-bottom: 48px;
+  }
 }
 
 /* --------------------- 4.4 Footer --------------------- */
@@ -238,13 +276,20 @@ dd {
   font-family: 'segoe-bold';
   font-style: normal;
   font-weight: 500;
+  font-size: 14px;
+  font-size: 1.4rem;
   background: #f05638;
   border: none;
   color: #fff;
-  font-size: 14px;
   letter-spacing: 2.8px;
   height: 45px;
   padding: 0 22px;
+}
+
+@media screen and (min-width: 1024px) {
+  .c-button {
+    height: 55px;
+  }
 }
 
 /* --------------------- 6.2 Inputs --------------------- */
@@ -252,12 +297,79 @@ dd {
   font-family: 'segoe-light';
   font-style: normal;
   font-weight: 300;
-  color: #9fa3a7;
   font-size: 16px;
+  font-size: 1.6rem;
+  color: #9fa3a7;
   border: none;
   height: 45px;
   padding-left: 11px;
   width: 100%;
+}
+
+@media screen and (min-width: 1024px) {
+  .c-input-text {
+    font-size: 20px;
+    font-size: 2rem;
+    height: 55px;
+  }
+}
+
+/* --------------------- 6.3 Article --------------------- */
+@media (min-width: 768px) {
+  .c-article {
+    display: -webkit-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    -moz-align-items: flex-end;
+    align-items: flex-end;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    -moz-justify-content: space-between;
+    justify-content: space-between;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    -moz-align-items: flex-end;
+    align-items: flex-end;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .c-article {
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    -moz-align-items: flex-start;
+    align-items: flex-start;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    -moz-justify-content: flex-start;
+    justify-content: flex-start;
+  }
+}
+
+@media (min-width: 768px) {
+  .c-article__content {
+    text-align: left;
+    max-width: 360px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .c-article__content {
+    max-width: 600px;
+    margin-top: 92px;
+    margin-left: 95px;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .c-article__content {
+    margin-top: 100px;
+    margin-left: 167px;
+  }
 }
 
 /**
@@ -282,15 +394,116 @@ body {
   padding: 40px 20px 58px;
 }
 
+@media (min-width: 768px) {
+  .c-main {
+    padding: 80px 20px 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .c-main {
+    padding: 0 20px;
+    height: 620px;
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .c-main {
+    height: 759px;
+  }
+}
+
+.c-social-nav {
+  display: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .c-social-nav {
+    display: -webkit-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    -moz-justify-content: flex-end;
+    justify-content: flex-end;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .c-social-nav__list {
+    display: -webkit-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    -moz-justify-content: flex-end;
+    justify-content: flex-end;
+    margin-top: 40px;
+    margin-right: 40px;
+  }
+}
+
+.c-social-nav__item {
+  height: 32px;
+  width: 32px;
+}
+
+.c-social-nav__item:first-of-type {
+  margin-right: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+  .c-social-nav__link {
+    display: -webkit-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -moz-align-items: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -moz-justify-content: center;
+    justify-content: center;
+  }
+}
+
 .c-header {
   margin-bottom: 26px;
 }
 
+@media (min-width: 768px) {
+  .c-header {
+    margin-left: 20px;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .c-header {
+    margin-left: 0;
+    margin-bottom: 30px;
+  }
+}
+
 .c-logo {
+  background-image: url(../../images/contoso.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
   height: 42px;
-  text-align: center;
   margin: 0 auto;
+  text-align: center;
   width: 132px;
+}
+
+@media (min-width: 768px) {
+  .c-logo {
+    margin: 0;
+  }
 }
 
 .c-logo__svg {
@@ -298,8 +511,65 @@ body {
   height: 100%;
 }
 
-.c-picture {
+.c-section {
+  margin: auto;
+}
+
+@media screen and (min-width: 1024px) {
+  .c-section {
+    display: -webkit-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -moz-align-items: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -moz-justify-content: center;
+    justify-content: center;
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .c-section {
+    max-width: 1200px;
+  }
+}
+
+.c-article__picture {
   margin-bottom: 23px;
+}
+
+@media (min-width: 768px) {
+  .c-article__picture {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .c-article__picture {
+    margin-bottom: 23px;
+    width: 30%;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .c-article__picture {
+    width: 374px;
+    height: 732px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .c-picture {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
 }
 
 .c-cta {
@@ -307,6 +577,12 @@ body {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media screen and (min-width: 1024px) {
+  .c-cta {
+    max-width: 420px;
+  }
 }
 
 .c-input-text {
