--- a/assets/styles/03_generics/_helpers.scss
+++ b/assets/styles/03_generics/_helpers.scss
@@ -1,18 +1,18 @@
-.show--mobile {
+.u-show--mobile {
     display: block;
     @include breakpoint(tablet) {
         display: none;
     }
 }
 
-.show--tablet {
+.u-show--tablet {
     display: block;
     @include breakpoint(desktop) {
         display: none;
     }
 }
 
-.show--desktop {
+.u-show--desktop {
     display: none;
     @include breakpoint(desktop) {
         display: block;
