--- a/assets/styles/04_elements/_headings.scss
+++ b/assets/styles/04_elements/_headings.scss
@@ -5,6 +5,7 @@
     color: $white;
     margin-bottom: 9px;
     @include breakpoint(desktop) {
-        font-size: 48px
+        font-size: 48px;
+        margin-bottom: 30px;
     }
 }
