--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -310,25 +310,60 @@ dd {
 }
 
 /* --------------------- 6.3 Article --------------------- */
-@media screen and (min-width: 1024px) {
+@media (min-width: 768px) {
   .c-article {
     display: -webkit-box;
     display: -moz-flex;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    -moz-align-items: flex-end;
+    align-items: flex-end;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     -moz-justify-content: space-between;
     justify-content: space-between;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    -moz-align-items: flex-end;
+    align-items: flex-end;
     width: 100%;
   }
 }
 
 @media screen and (min-width: 1024px) {
+  .c-article {
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    -moz-align-items: flex-start;
+    align-items: flex-start;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    -moz-justify-content: flex-start;
+    justify-content: flex-start;
+  }
+}
+
+@media (min-width: 768px) {
   .c-article__content {
     text-align: left;
+    max-width: 360px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .c-article__content {
     max-width: 600px;
-    margin-top: 165px;
+    margin-top: 92px;
+    margin-left: 95px;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .c-article__content {
+    margin-top: 100px;
+    margin-left: 167px;
   }
 }
 
@@ -354,17 +389,23 @@ body {
   padding: 40px 20px 58px;
 }
 
-@media screen and (min-width: 1024px) {
+@media (min-width: 768px) {
   .c-main {
-    padding: 0;
-    height: 759px;
-    position: relative;
+    padding: 80px 20px 0;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .c-main {
     padding: 0 20px;
+    height: 620px;
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .c-main {
+    height: 759px;
   }
 }
 
@@ -430,6 +471,20 @@ body {
   margin-bottom: 26px;
 }
 
+@media (min-width: 768px) {
+  .c-header {
+    margin-left: 20px;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .c-header {
+    margin-left: 0;
+    margin-bottom: 30px;
+  }
+}
+
 .c-logo {
   height: 42px;
   text-align: center;
@@ -437,7 +492,7 @@ body {
   width: 132px;
 }
 
-@media screen and (min-width: 1024px) {
+@media (min-width: 768px) {
   .c-logo {
     margin: 0;
   }
@@ -446,6 +501,10 @@ body {
 .c-logo__svg {
   width: 100%;
   height: 100%;
+}
+
+.c-section {
+  margin: auto;
 }
 
 @media screen and (min-width: 1024px) {
@@ -466,9 +525,9 @@ body {
   }
 }
 
-@media screen and (min-width: 1380px) {
+@media screen and (min-width: 1140px) {
   .c-section {
-    max-width: 1600px;
+    max-width: 1200px;
   }
 }
 
@@ -476,8 +535,15 @@ body {
   margin-bottom: 23px;
 }
 
+@media (min-width: 768px) {
+  .c-article__picture {
+    margin-bottom: 0;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .c-article__picture {
+    margin-bottom: 23px;
     width: 30%;
   }
 }
