--- a/assets/styles/06_Components/_button.scss
+++ b/assets/styles/06_Components/_button.scss
@@ -13,6 +13,7 @@
     letter-spacing: 2.8px;
     height: 45px;
     padding: 0 22px;
+    outline: none;
     @include breakpoint(desktop) {
         height: 55px;
     }
