--- a/assets/styles/03_generics/_base.scss
+++ b/assets/styles/03_generics/_base.scss
@@ -31,7 +31,8 @@ body {
 }
 
 body {
-    -webkit-font-smoothing: subpixel-antialiased;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     margin: 0;
     padding: 0;
 }
