--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -2,7 +2,6 @@
 // Configuration and helpers
 // -------------------------------
 @import '01_settings/variables';
-@import '02_tools/functions';
 @import '02_tools/mixins';
 @import '02_tools/flex';
 
@@ -18,17 +17,18 @@
 		3.1 base
 		3.2 Fonts
 		3.3 Typography
-		3.4 Helpers
 	4. Elements
 		4.1 Header 
 		4.2 Headings
 		4.3 Parags
 		4.4 Footer
 	5. Objects
-		5.1 Buttons
+		-------------------
 	6. Components
-		6.1 Buttons
-		6.1 Forms elements
+		6.1 Logos
+		6.2 Buttons
+		6.3 Forms elements
+		6.4 Articles
 	7. Utilities
 		7.1 utilities
 
@@ -55,10 +55,6 @@
 
 @import '03_generics/typography';
 
-/* --------------------- 3.4 Helpers --------------------- */
-
-@import '03_generics/helpers';
-
 /**
  * ---------------------------------------------------
  * 	4. Elements
@@ -66,19 +62,15 @@
  */
 
 
-/* --------------------- 4.1 Header --------------------- */
-
-@import '04_elements/header';
-
-/* --------------------- 4.2 headings --------------------- */
+/* --------------------- 4.1 headings --------------------- */
 
 @import '04_elements/headings';
 
-/* --------------------- 4.3 parags (texts, notes, messages) --------------------- */
+/* --------------------- 4.2 parags (texts, notes, messages) --------------------- */
 
 @import '04_elements/parags';
 
-/* --------------------- 4.4 Footer --------------------- */
+/* --------------------- 4.3 Footer --------------------- */
 
 @import '04_elements/footer';
 
@@ -96,15 +88,19 @@
  */
 
 
-/* --------------------- 6.1 Buttons --------------------- */
+/* --------------------- 6.1 Logo --------------------- */
+
+@import '06_components/logo';
+
+/* --------------------- 6.2 Buttons --------------------- */
 
 @import '06_components/button';
 
-/* --------------------- 6.2 Inputs --------------------- */
+/* --------------------- 6.3 Inputs --------------------- */
 
 @import '06_components/input-text';
 
-/* --------------------- 6.3 Article --------------------- */
+/* --------------------- 6.4 Article --------------------- */
 
 @import '06_components/article';
 
